logs/django-mapshop.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/django_mapshop-0.3.egg-info'...
Listing './lib/python3.5/site-packages/mapshop'...
Compiling './lib/python3.5/site-packages/mapshop/ajax.py'...
***   File "./lib/python3.5/site-packages/mapshop/ajax.py", line 135
    print '----------------------------------%s' % request.GET['kiosk_id']
                                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mapshop/api.py'...
***   File "./lib/python3.5/site-packages/mapshop/api.py", line 44
    print 'bye %s ammount %s ' % (indata['product_id'], indata['ammount'])
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mapshop/management'...
Listing './lib/python3.5/site-packages/mapshop/management/commands'...
Compiling './lib/python3.5/site-packages/mapshop/management/commands/load_data.py'...
***   File "./lib/python3.5/site-packages/mapshop/management/commands/load_data.py", line 20
    print 'start'
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mapshop/management/commands/load_kiosk.py'...
***   File "./lib/python3.5/site-packages/mapshop/management/commands/load_kiosk.py", line 19
    print 'start'
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mapshop/management/commands/load_products.py'...
***   File "./lib/python3.5/site-packages/mapshop/management/commands/load_products.py", line 26
    print 'start %s ' % cnt
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mapshop/management/commands/test_api.py'...
***   File "./lib/python3.5/site-packages/mapshop/management/commands/test_api.py", line 25
    print colored('start test API', 'green', attrs=['reverse', 'blink'])
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mapshop/management/commands/utils.py'...
***   File "./lib/python3.5/site-packages/mapshop/management/commands/utils.py", line 14
    print 'User %s just has been created!' % username
                                         ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/mapshop/migrations'...
Compiling './lib/python3.5/site-packages/mapshop/models.py'...
***   File "./lib/python3.5/site-packages/mapshop/models.py", line 204
    print '---------------------------------------work with order %s' % instance.pk
                                                                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/mapshop/tasks.py'...
***   File "./lib/python3.5/site-packages/mapshop/tasks.py", line 22
    print colored('send email to %s' % i.contact, 'red')
                ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mapshop/templatetags'...
Compiling './lib/python3.5/site-packages/mapshop/views.py'...
***   File "./lib/python3.5/site-packages/mapshop/views.py", line 19
    print 'my var %s ' % request.supervar
                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
